# projector

./: .gitignore  CMakeLists.txt  README.md  package.xml  projector.pde  setup.py
include/cloud_gateway/: cloud_gateway.h
include/image_screen/: ImageScreen.h
levels/: gameover.xcf  startgame.xcf  youwin.xcf
nodes/: projector.py
src/cloud_gateway/: cloud_gateway.cpp  cloud_node.cpp
src/game/: bargraphs.py  projector.py
src/image_screen/: image_screen.cpp
src/projector/: bargraphs.py
src/projector/nodes/: game.py
