<?xml version="1.0"?>
<package format="2">
  <name>projector</name>
  <version>0.0.0</version>
  <description>The projector package</description>

  <maintainer email="laurenz@acrai.de">Laurenz Altenmueller</maintainer>
  
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
